--- a/stacks/garage/compose.yaml
+++ b/stacks/garage/compose.yaml
@@ -35,7 +35,7 @@ services:
       traefik.enable: "true"
       traefik.http.routers.garage.entryPoints: "https"
       traefik.http.routers.garage.middlewares: "localonly@file"
-      traefik.http.routers.garage.rule: "Host(`s3.${domain}`)"
+      traefik.http.routers.garage.rule: "Host(`s3.${domain:?}`)"
       traefik.http.services.garage.loadbalancer.server.url: "http://garage:3900"
   webui:
     <<: *common-settings
@@ -56,5 +56,5 @@ services:
       traefik.enable: "true"
       traefik.http.routers.garage-webui.entryPoints: "https"
       traefik.http.routers.garage-webui.middlewares: "localonly@file"
-      traefik.http.routers.garage-webui.rule: "Host(`garage.${domain}`)"
+      traefik.http.routers.garage-webui.rule: "Host(`garage.${domain:?}`)"
       traefik.http.services.garage-webui.loadbalancer.server.url: "http://garage-webui:3909"
