--- a/stacks/handbrake/compose.yaml
+++ b/stacks/handbrake/compose.yaml
@@ -39,5 +39,5 @@ services:
       traefik.enable: 'true'
       traefik.http.routers.handbrake.entryPoints: 'https'
       traefik.http.routers.handbrake.middlewares: 'localonly@file'
-      traefik.http.routers.handbrake.rule: 'Host(`hb.${domain}`)'
+      traefik.http.routers.handbrake.rule: 'Host(`hb.${domain:?}`)'
       traefik.http.services.handbrake.loadbalancer.server.url: 'http://handbrake:5800'
