--- a/stacks/handbrake/example.env
+++ b/stacks/handbrake/example.env
@@ -1,6 +1,6 @@
 # Storage settings
-data=/path/to/host/storage
-media=/path/to/media/storage
+data=/opt/stacks/stackname
+media=/mnt/bulk
 
 # Domain settings
 domain=yourdomain.com
