--- a/stacks/immich/example.env
+++ b/stacks/immich/example.env
@@ -1,5 +1,5 @@
 # Storage settings
-data=/path/to/host/storage
+data=/opt/stacks/stackname
 
 # Domain settings
 domain=yourdomain.com
@@ -12,4 +12,6 @@ immich_version=release
 keydb_version=latest
 
 # Postgres settings
+db_name=immich
 db_pass="a_secure_db_password"
+db_user=immich
