--- a/stacks/rustfs/compose.yaml
+++ b/stacks/rustfs/compose.yaml
@@ -33,12 +33,12 @@ services:
       traefik.enable: "true"
       traefik.http.routers.rustfs.entryPoints: "https"
       traefik.http.routers.rustfs.middlewares: "localonly@file"
-      traefik.http.routers.rustfs.rule: "Host(`rs.${domain}`)"
+      traefik.http.routers.rustfs.rule: "Host(`rs.${domain:?}`)"
       traefik.http.routers.rustfs.service: "rustfs"
       traefik.http.services.rustfs.loadbalancer.server.url: "http://rustfs:9001"
       # S3 entrypoint
       traefik.http.routers.rustfs-s3.entryPoints: "https"
       traefik.http.routers.rustfs-s3.middlewares: "localonly@file"
-      traefik.http.routers.rustfs-s3.rule: "Host(`r3.${domain}`)"
+      traefik.http.routers.rustfs-s3.rule: "Host(`r3.${domain:?}`)"
       traefik.http.routers.rustfs-s3.service: "rustfs-s3"
       traefik.http.services.rustfs-s3.loadbalancer.server.url: "http://rustfs:9000"
