--- a/stacks/rxresume/example.env
+++ b/stacks/rxresume/example.env
@@ -1,5 +1,5 @@
 # Storage settings
-data=/path/to/host/storage
+data=/opt/stacks/stackname
 
 # Domain settings
 domain=yourdomain.com
@@ -9,11 +9,13 @@ chrome_version=latest
 postgres_version=16-alpine
 rxresume_version=latest
 
-# Postgres settings
-db_pass="a_secure_db_password"
-
 # Chrome settings
 chrome_token='a_long_and_secure_secret'
+
+# Postgres settings
+db_name=rxresume
+db_pass="a_secure_db_password"
+db_user=rxresume
 
 # RxResume settings
 access_token='a_long_and_secure_secret'
