--- a/stacks/forgejo/compose.yaml
+++ b/stacks/forgejo/compose.yaml
@@ -26,16 +26,16 @@ services:
       USER_GID: ${gid:-1000}
       FORGEJO__database__DB_TYPE: postgres
       FORGEJO__database__HOST: forgejodb:5432
-      FORGEJO__database__NAME: forgejo
-      FORGEJO__database__USER: forgejo
-      FORGEJO__database__PASSWD: ${db_pass:-forgejo}
+      FORGEJO__database__NAME: ${db_name:-forgejo}
+      FORGEJO__database__PASSWD: ${db_pass:?}
+      FORGEJO__database__USER: ${db_user:-forgejo}
       FORGEJO__migrations__ALLOW_LOCALNETWORKS: true
     depends_on:
       - forgejodb
     labels:
       traefik.enable: "true"
       traefik.http.routers.forgejo.entryPoints: "https"
-      traefik.http.routers.forgejo.rule: "Host(`fj.${domain}`)"
+      traefik.http.routers.forgejo.rule: "Host(`fj.${domain:?}`)"
       traefik.http.services.forgejo.loadbalancer.server.url: "http://forgejo:3000"
     networks:
       default:
@@ -58,9 +58,9 @@ services:
       - SETGID
       - SETUID
     environment:
-      POSTGRES_USER: forgejo
-      POSTGRES_PASSWORD: ${db_pass:-forgejo}
-      POSTGRES_DB: forgejo
+      POSTGRES_DB: ${db_name:-forgejo}
+      POSTGRES_PASSWORD: ${db_pass:?}
+      POSTGRES_USER: ${db_user:-forgejo}
     networks:
       default:
     volumes:
@@ -76,7 +76,7 @@ services:
     depends_on:
       - forgejo
     environment:
-      GITEA_INSTANCE_URL: https://fj.${domain}/
+      GITEA_INSTANCE_URL: https://fj.${domain:?}/
       GITEA_RUNNER_REGISTRATION_TOKEN: ${token}
       GITEA_RUNNER_NAME: forgejo_runner
       GITEA_RUNNER_LABELS:
