--- a/stacks/forgejo/example.env
+++ b/stacks/forgejo/example.env
@@ -1,5 +1,5 @@
 # Storage settings
-data=/path/to/host/storage
+data=/opt/stacks/stackname
 
 # Domain settings
 domain=yourdomain.com
@@ -12,3 +12,8 @@ runner_version=nightly
 # Forgejo settings
 db_pass="a_secure_db_password"
 token="a_secure_token"
+
+# Postgres settings
+db_name=forgejo
+db_pass="a_secure_db_password"
+db_user=forgejo
