--- a/stacks/gitea/example.env
+++ b/stacks/gitea/example.env
@@ -1,5 +1,5 @@
 # Storage settings
-data=/path/to/host/storage
+data=/opt/stacks/stackname
 
 # Domain settings
 domain=yourdomain.com
@@ -16,3 +16,8 @@ runner_version=nightly
 # Gitea settings
 db_pass="a_secure_db_password"
 token="a_secure_token"
+
+# Postgres settings
+db_name=gitea
+db_pass="a_secure_db_password"
+db_user=gitea
