--- a/stacks/homeassistant/compose.yaml
+++ b/stacks/homeassistant/compose.yaml
@@ -28,14 +28,14 @@ services:
       proxy: null
       ha_mqtt: null
     volumes:
-      - ${data:-.}/homeassistant:/config # Local storage
-      - /etc/localtime:/etc/localtime:ro # Timezone synchronization
+      - ${data:-.}/homeassistant:/config
+      - /etc/localtime:/etc/localtime:ro
       - /run/dbus:/run/dbus:ro # Bluetooth connection
     labels:
       traefik.enable: "true"
       traefik.http.routers.homeassistant.entryPoints: "https"
       traefik.http.routers.homeassistant.middlewares: "localonly@file"
-      traefik.http.routers.homeassistant.rule: "Host(`ha.${domain}`)"
+      traefik.http.routers.homeassistant.rule: "Host(`ha.${domain:?}`)"
       traefik.http.services.homeassistant.loadbalancer.server.url: "http://homeassistant:8123"
   zwave-js-ui:
     <<: *common-settings
@@ -48,7 +48,7 @@ services:
     networks:
       proxy:
     environment:
-      SESSION_SECRET: ${key:?change_me}
+      SESSION_SECRET: ${key:?}
       TZ: ${timezone:-UTC}
     volumes:
       - ${data:-.}/zwave-config:/usr/src/app/store
@@ -58,7 +58,7 @@ services:
       traefik.enable: "true"
       traefik.http.routers.zwave.entryPoints: "https"
       traefik.http.routers.zwave.middlewares: "localonly@file"
-      traefik.http.routers.zwave.rule: "Host(`zw.${domain}`)"
+      traefik.http.routers.zwave.rule: "Host(`zw.${domain:?}`)"
       traefik.http.services.zwave.loadbalancer.server.url: "http://zwave-js-ui:8091"
   zigbee2mqtt:
     <<: *common-settings
@@ -84,7 +84,7 @@ services:
       traefik.enable: "true"
       traefik.http.routers.zigbee2mqtt.entryPoints: "https"
       traefik.http.routers.zigbee2mqtt.middlewares: "localonly@file"
-      traefik.http.routers.zigbee2mqtt.rule: "Host(`zb.${domain}`)"
+      traefik.http.routers.zigbee2mqtt.rule: "Host(`zb.${domain:?}`)"
       traefik.http.services.zigbee2mqtt.loadbalancer.server.url: "http://zigbee2mqtt:8080"
   mqtt:
     <<: *common-settings
