--- a/stacks/paperlessngx/example.env
+++ b/stacks/paperlessngx/example.env
@@ -1,5 +1,5 @@
 # Storage settings
-data=/path/to/host/storage
+data=/opt/stacks/stackname
 
 # Domain settings
 domain=yourdomain.com
@@ -14,10 +14,12 @@ keydb_version=latest
 paperlessngx_version=latest
 postgres_version=16
 
-# Postgres settings
-db_pass="a_secure_db_password"
-
 # Paperlessngx settings
 secret_key='a_long_and_secure_secret'
 client_id='a_long_and_secure_secret'
 client_secret='a_long_and_secure_secret'
+
+# Postgres settings
+db_name=paperless
+db_pass="a_secure_db_password"
+db_user=paperless
