--- a/stacks/website/example.env
+++ b/stacks/website/example.env
@@ -1,5 +1,5 @@
 # Storage settings
-data=/path/to/host/storage
+data=/opt/stacks/stackname
 
 # Domain settings
 domain=yourdomain.com
@@ -16,8 +16,10 @@ homepage_version=latest
 mywebsite_version=latest
 postgres_version=16
 
-# Freshrss settings
-DB_PASSWORD='a_secure_db_password'
+# Postgres settings
+db_name=freshrss
+db_pass="a_secure_db_password"
+db_user=freshrss
 
 # Vaultwarden settings
 vaultwarden_admin_token='a_secure_hashed_login'
