use real timezone

--- a/stacks/homeassistant/example.env
+++ b/stacks/homeassistant/example.env
@@ -5,7 +5,7 @@ data=/opt/stacks/stackname
 domain=yourdomain.com
 
 # General settings
-timezone=Your/Timezone
+timezone=America/Chicago
 
 # Image settings
 homeassistant_version=stable
