--- a/stacks/media/example.env
+++ b/stacks/media/example.env
@@ -9,7 +9,7 @@ domain=yourdomain.com
 uid=1000
 gid=1000
 umask=000
-timezone=Your/Timezone
+timezone=America/Chicago
 
 # Image settings
 calibre_web_version=latest
