--- a/stacks/paperlessngx/example.env
+++ b/stacks/paperlessngx/example.env
@@ -7,7 +7,7 @@ domain=yourdomain.com
 # General settings
 uid=1000
 gid=1000
-timezone=Your/Timezone
+timezone=America/Chicago
 
 # Image settings
 keydb_version=latest
