--- a/stacks/proxies/example.env
+++ b/stacks/proxies/example.env
@@ -2,7 +2,7 @@
 data=/opt/stacks/stackname
 
 # General settings
-timezone=Your/Timezone
+timezone=America/Chicago
 
 # Image settings
 gluetun_version=v3.40
