--- a/stacks/handbrake/example.env
+++ b/stacks/handbrake/example.env
@@ -8,7 +8,7 @@ domain=yourdomain.com
 # General settings
 uid=1000
 gid=1000
-timezone=Your/Timezone
+timezone=America/Chicago
 
 # Image settings
 handbrake_version=latest
