--- a/stacks/n8n/example.env
+++ b/stacks/n8n/example.env
@@ -5,7 +5,7 @@ data=/opt/stacks/stackname
 domain=yourdomain.com
 
 # General settings
-timezone=Your/Timezone
+timezone=America/Chicago
 
 # Image settings
 n8n_version=latest
