--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -9,7 +9,7 @@ second_level_domain=yourdomain
 # General settings
 uid=1000
 gid=1000
-timezone=Your/Timezone
+timezone=America/Chicago
 
 # Image settings
 authelia_version=latest
