--- a/stacks/docs/example.env
+++ b/stacks/docs/example.env
@@ -18,6 +18,10 @@ prometheus_version=latest
 uptimekuma_version=2-rootless
 
 # Bookstack settings
-root_pass="a_secure_db_admin_password"
-db_pass="a_secure_db_password"
 app_key="a_base64_encoded_secret"
+
+# MySQL settings
+db_name=bookstack
+db_pass="a_secure_db_password"
+db_user=bookstack
+root_pass="a_secure_db_admin_password"
