--- a/stacks/garage/compose.yaml
+++ b/stacks/garage/compose.yaml
@@ -5,9 +5,9 @@ x-common-settings: &common-settings
   logging:
     driver: local
     options:
-      max-size: "10m"
-      max-file: "3"
       compress: "true"
+      max-file: "3"
+      max-size: "10m"
   restart: unless-stopped
   security_opt:
     - no-new-privileges:true
@@ -37,7 +37,7 @@ services:
       traefik.http.routers.garage.middlewares: "localonly@file"
       traefik.http.routers.garage.rule: "Host(`s3.${domain:?}`)"
       traefik.http.services.garage.loadbalancer.server.url: "http://garage:3900"
-  webui:
+  garage-webui:
     <<: *common-settings
     image: khairul169/garage-webui:${garage_webui_version:-latest}
     container_name: garage-webui
