--- a/stacks/homeassistant/compose.yaml
+++ b/stacks/homeassistant/compose.yaml
@@ -1,14 +1,14 @@
 networks:
+  mqtt: null
   proxy:
     external: true
-  ha_mqtt:
 x-common-settings: &common-settings
   logging:
     driver: local
     options:
-      max-size: "10m"
-      max-file: "3"
       compress: "true"
+      max-file: "3"
+      max-size: "10m"
   restart: unless-stopped
   security_opt:
     - no-new-privileges:true
@@ -26,7 +26,7 @@ services:
       - zigbee2mqtt
     networks:
       proxy: null
-      ha_mqtt: null
+      mqtt: null
     volumes:
       - ${data:-.}/homeassistant:/config
       - /etc/localtime:/etc/localtime:ro
@@ -37,6 +37,49 @@ services:
       traefik.http.routers.homeassistant.middlewares: "localonly@file"
       traefik.http.routers.homeassistant.rule: "Host(`ha.${domain:?}`)"
       traefik.http.services.homeassistant.loadbalancer.server.url: "http://homeassistant:8123"
+  mqtt:
+    <<: *common-settings
+    container_name: mqtt
+    image: eclipse-mosquitto:${mqtt_version:-latest}
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
+    networks:
+      mqtt:
+    command: "mosquitto -c /mosquitto-no-auth.conf"
+    volumes:
+      - ${data:-.}/mqtt/config:/mosquitto/config
+      - ${data:-.}/mqtt/data:/mosquitto/data
+      - ${data:-.}/mqtt/log:/mosquitto/log
+  zigbee2mqtt:
+    <<: *common-settings
+    container_name: zigbee2mqtt
+    image: ghcr.io/koenkk/zigbee2mqtt:${zigbee2mqtt_version:-latest}
+    cap_drop:
+      - ALL
+    depends_on:
+      - mqtt
+    networks:
+      proxy:
+      mqtt:
+    environment:
+      TZ: ${timezone:-UTC}
+      ZIGBEE2MQTT_CONFIG_MQTT_SERVER: "mqtt://mqtt:1883"
+      ZIGBEE2MQTT_CONFIG_SERIAL_PORT: /dev/ttyACM0
+    volumes:
+      - ${data:-.}/zigbee2mqtt:/app/data
+      - /run/udev:/run/udev:ro
+    devices:
+      - /dev/serial/by-id/${zigbee_device:?}:/dev/ttyACM0
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.zigbee2mqtt.entryPoints: "https"
+      traefik.http.routers.zigbee2mqtt.middlewares: "localonly@file"
+      traefik.http.routers.zigbee2mqtt.rule: "Host(`zb.${domain:?}`)"
+      traefik.http.services.zigbee2mqtt.loadbalancer.server.url: "http://zigbee2mqtt:8080"
   zwave-js-ui:
     <<: *common-settings
     image: zwavejs/zwave-js-ui:${zwave_version:-latest}
@@ -60,46 +103,3 @@ services:
       traefik.http.routers.zwave.middlewares: "localonly@file"
       traefik.http.routers.zwave.rule: "Host(`zw.${domain:?}`)"
       traefik.http.services.zwave.loadbalancer.server.url: "http://zwave-js-ui:8091"
-  zigbee2mqtt:
-    <<: *common-settings
-    container_name: zigbee2mqtt
-    image: ghcr.io/koenkk/zigbee2mqtt:${zigbee2mqtt_version:-latest}
-    cap_drop:
-      - ALL
-    depends_on:
-      - mqtt
-    networks:
-      proxy:
-      ha_mqtt:
-    environment:
-      TZ: ${timezone:-UTC}
-      ZIGBEE2MQTT_CONFIG_MQTT_SERVER: "mqtt://mqtt:1883"
-      ZIGBEE2MQTT_CONFIG_SERIAL_PORT: /dev/ttyACM0
-    volumes:
-      - ${data:-.}/zigbee2mqtt:/app/data
-      - /run/udev:/run/udev:ro
-    devices:
-      - /dev/serial/by-id/${zigbee_device:?}:/dev/ttyACM0
-    labels:
-      traefik.enable: "true"
-      traefik.http.routers.zigbee2mqtt.entryPoints: "https"
-      traefik.http.routers.zigbee2mqtt.middlewares: "localonly@file"
-      traefik.http.routers.zigbee2mqtt.rule: "Host(`zb.${domain:?}`)"
-      traefik.http.services.zigbee2mqtt.loadbalancer.server.url: "http://zigbee2mqtt:8080"
-  mqtt:
-    <<: *common-settings
-    container_name: mqtt
-    image: eclipse-mosquitto:${mqtt_version:-latest}
-    cap_drop:
-      - ALL
-    cap_add:
-      - CHOWN
-      - SETGID
-      - SETUID
-    networks:
-      ha_mqtt:
-    command: "mosquitto -c /mosquitto-no-auth.conf"
-    volumes:
-      - ${data:-.}/mqtt/config:/mosquitto/config
-      - ${data:-.}/mqtt/data:/mosquitto/data
-      - ${data:-.}/mqtt/log:/mosquitto/log
